Update to react-scripts 3.4.1-dev.17 and fix prod file loading

--- a/test-apps/display-performance-test-app/public/index.html
+++ b/test-apps/display-performance-test-app/public/index.html
@@ -39,7 +39,7 @@
     }
   </style>
 
-  <script type="text/javascript" src="%PUBLIC_URL%/public/scripts/checkbrowser.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/scripts/checkbrowser.js"></script>
 </head>
 
 <body>
